--- a/index.html
+++ b/index.html
@@ -1,127 +1,234 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Moonsorrow Industries</title>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
-  <header id="header">
-
-    <div class="logo">
-      <img id="header-img" src="https://thecakeisaliegaming.files.wordpress.com/2020/01/moonsorrow-logo-v3.png" alt="Moonsorrow Industries logo">
-    </div>
-
-    <nav id="nav-bar">
-      <ul>
-        <li><a class="nav-link" href="#main">About</a></li>
-        <li><a class="nav-link" href="#features">Features</a></li>
-        <li><a class="nav-link" href="#demo">Video</a></li>
-        <li><a class="nav-link" href="#pricing">Pricing</a></li>
-        <li><a class="nav-link" href="#form">Mailing</a></li>
-      </ul>
-    </nav>
-
-  </header >
-
-  <div id="main" class="main"><!-- main container -->
-
-    <div id="about" class="fcontainer falign-center center-text"><!-- intro section -->
-      <div class="">
-      <div class="heading">
-        <h1>The Kivenkantaja</h1>
-        <p class="dshadow">Prestige heavy-duty mining vessel</p>
+  <head>
+    <meta charset="utf-8" />
+    <title>Moonsorrow Industries</title>
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand:400,600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="./favicon.png" />
+  </head>
+  <body>
+    <header id="header">
+      <div class="logo">
+        <img
+          id="header-img"
+          src="https://thecakeisaliegaming.files.wordpress.com/2020/01/moonsorrow-logo-v3.png"
+          alt="Moonsorrow Industries logo"
+        />
       </div>
 
-      <div class="blurb dshadow">
-        <p>The ultimate in style and comfort, the Kivenkantaja is a fully customized Imperial Cutter retrofitted by our crack team of engineers for highly-efficient core mining and maximal cargo space. Because bigger is always better!</p>
-      </div>
-      </div>
-
-    </div><!-- end intro section -->
-
-    <div id="features" class="fcontainer white"><!-- features section -->
-      <div class="fbox1">
-        <h2>Features</h2>
-      </div>
-
-      <div class="fbox2">
+      <nav id="nav-bar">
         <ul>
-          <li><span class="bold">Pulse wave analyser.</span> State-of-the-art technology for quickly and accurately identifying high-value asteroids. Time is money!</li>
-          <li><span class="bold">Seismic charge launcher.</span> Effortlessly crack open asteroid cores in spectacular fashion to get to that juicy goodness inside.</li>
-          <li><span class="bold">Multiple limpet controllers.</span> Because manual ore scooping is for peasants.</li>
-          <li><span class="bold">512T of cargo space.</span> Bring home the bacon with more tonnage than you can point a really big cyber stick at. Why bother with less?</li>
-          <li><span class="bold">Superior firepower.</span> Three large, precision-engineered multi-canons for warning off the competition and rapidly neutralising pirate scum and other pesky interlopers.</li>
-          <li><span class="bold">Prismic shield generator.</span> Protects against drunken mishaps and sneaky ambushes as well as helping to keep that paintwork looking factory fresh.</li>
-          <li><span class="bold">Custom-tuned class A thrusters.</span> For getting there quicker and being able to leave in a hurry. There's no shame in knowing when to do a hasty Sir Robin!</li>
-          <li><span class="bold">Fully stocked bar.</span> Kick back and enjoy a delicious cocktail or four while your drones do all the hard work. Please drink responsibly while flying a superheavy Imperial-class warship.</li>
+          <li><a class="nav-link" href="#main">About</a></li>
+          <li><a class="nav-link" href="#features">Features</a></li>
+          <li><a class="nav-link" href="#demo">Video</a></li>
+          <li><a class="nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link" href="#form">Mailing</a></li>
         </ul>
-      </div>
+      </nav>
+    </header>
 
-    </div><!-- end features section -->
+    <div id="main" class="main">
+      <!-- main container -->
 
-    <div id="demo" class="fcontainer gray"><!-- video section -->
-      <div class="fbox1">
-        <h2>See it in action</h2>
-      </div>
-
-      <div class="fbox2">
-        <div class="vidbox">
-          <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/WSE3VIKO0pY" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div><!-- end video section -->
-
-    <div id="pricing" class="fcontainer white"><!-- pricing section -->
-      <div class="fbox1">
-        <h2>Pricing</h2>
-      </div>
-
-      <div class="fbox2">
-        <ul>
-          <li>Starting from just 1,499,999,999 CR. Life support not included.</li>
-          <li>Wide range of optional extras available, including fairy lights, dashboard bobbleheads, and external decals.</li>
-          <li>Finance packages available at exorbitant interest rates. <span class="small-text">(Subject to terms & conditions and a credit check through the Bank of Zaonce.)</span></li>
-          <li>Call 555-666-3306 now to book your test flight.</li>
-        </ul>
-      </div>
-
-    </div><!-- end of pricing section -->
-
-    <div class="fcontainer gray"><!-- newsletter section -->
-      <div class="fbox1">
-        <h2>Mailing list</h2>
-      </div>
-
-      <div class="fbox2">
-        <div class="form-text">
-          <p>Stay in the loop with the <span class="orange-text bold">Moonsorrow Industries</span> newsletter, for all the latest product updates, exclusive offers, and more spam and unsolicited emails from unvetted third-parties than your junk folder can reasonably handle. Is email still even a thing in the 34th century? Who cares, sign up now!</p>
-        </div>
-
-        <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
-          <input id="email" class="input-style" type="email" name="email" placeholder="Enter a valid email address" required>
-
-          <div class="form-section">
-            <input id="submit" class="input-style button" type="submit" value="Sign up now!">
+      <div id="about" class="fcontainer falign-center center-text">
+        <!-- intro section -->
+        <div class="">
+          <div class="heading">
+            <h1>The Kivenkantaja</h1>
+            <p class="dshadow">Prestige heavy-duty mining vessel</p>
           </div>
-        </form>
+
+          <div class="blurb dshadow">
+            <p>
+              The ultimate in style and comfort, the Kivenkantaja is a fully
+              customized Imperial Cutter retrofitted by our crack team of
+              engineers for highly-efficient core mining and maximal cargo
+              space. Because bigger is always better!
+            </p>
+          </div>
+        </div>
       </div>
+      <!-- end intro section -->
 
-    </div><!-- end newsletter section -->
+      <div id="features" class="fcontainer white">
+        <!-- features section -->
+        <div class="fbox1">
+          <h2>Features</h2>
+        </div>
 
-    <footer class="center-text dshadow">
-      <p>Copyright © 3306 <span class="orange-text bold">Moonsorrow Industries Ltd.</span></p>
-      <p>Written, coded and abused by <a href="https://www.freecodecamp.org/caffeinatedpixels" target=”_blank”>Stevie Gill</a></p>
-    </footer>
+        <div class="fbox2">
+          <ul>
+            <li>
+              <span class="bold">Pulse wave analyser.</span> State-of-the-art
+              technology for quickly and accurately identifying high-value
+              asteroids. Time is money!
+            </li>
+            <li>
+              <span class="bold">Seismic charge launcher.</span> Effortlessly
+              crack open asteroid cores in spectacular fashion to get to that
+              juicy goodness inside.
+            </li>
+            <li>
+              <span class="bold">Multiple limpet controllers.</span> Because
+              manual ore scooping is for peasants.
+            </li>
+            <li>
+              <span class="bold">512T of cargo space.</span> Bring home the
+              bacon with more tonnage than you can point a really big cyber
+              stick at. Why bother with less?
+            </li>
+            <li>
+              <span class="bold">Superior firepower.</span> Three large,
+              precision-engineered multi-canons for warning off the competition
+              and rapidly neutralising pirate scum and other pesky interlopers.
+            </li>
+            <li>
+              <span class="bold">Prismic shield generator.</span> Protects
+              against drunken mishaps and sneaky ambushes as well as helping to
+              keep that paintwork looking factory fresh.
+            </li>
+            <li>
+              <span class="bold">Custom-tuned class A thrusters.</span> For
+              getting there quicker and being able to leave in a hurry. There's
+              no shame in knowing when to do a hasty Sir Robin!
+            </li>
+            <li>
+              <span class="bold">Fully stocked bar.</span> Kick back and enjoy a
+              delicious cocktail or four while your drones do all the hard work.
+              Please drink responsibly while flying a superheavy Imperial-class
+              warship.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- end features section -->
 
-  </div><!-- end of main container -->
+      <div id="demo" class="fcontainer gray">
+        <!-- video section -->
+        <div class="fbox1">
+          <h2>See it in action</h2>
+        </div>
 
-  <!-- added in a script to offset anchor for fixed header plus it has a nice scrolling animation :) -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+        <div class="fbox2">
+          <div class="vidbox">
+            <iframe
+              id="video"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/WSE3VIKO0pY"
+              frameborder="0"
+              allow="accelerometer; encrypted-media; gyroscope; picture-in-picture;"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <!-- end video section -->
 
-</body>
+      <div id="pricing" class="fcontainer white">
+        <!-- pricing section -->
+        <div class="fbox1">
+          <h2>Pricing</h2>
+        </div>
+
+        <div class="fbox2">
+          <ul>
+            <li>
+              Starting from just 1,499,999,999 CR. Life support not included.
+            </li>
+            <li>
+              Wide range of optional extras available, including fairy lights,
+              dashboard bobbleheads, and external decals.
+            </li>
+            <li>
+              Finance packages available at exorbitant interest rates.
+              <span class="small-text"
+                >(Subject to terms & conditions and a credit check through the
+                Bank of Zaonce.)</span
+              >
+            </li>
+            <li>Call 555-666-3306 now to book your test flight.</li>
+          </ul>
+        </div>
+      </div>
+      <!-- end of pricing section -->
+
+      <div class="fcontainer gray">
+        <!-- newsletter section -->
+        <div class="fbox1">
+          <h2>Mailing list</h2>
+        </div>
+
+        <div class="fbox2">
+          <div class="form-text">
+            <p>
+              Stay in the loop with the
+              <span class="orange-text bold">Moonsorrow Industries</span>
+              newsletter, for all the latest product updates, exclusive offers,
+              and more spam and unsolicited emails from unvetted third-parties
+              than your junk folder can reasonably handle. Is email still even a
+              thing in the 34th century? Who cares, sign up now!
+            </p>
+          </div>
+
+          <form
+            id="form"
+            action="https://www.freecodecamp.com/email-submit"
+            method="post"
+          >
+            <input
+              id="email"
+              class="input-style"
+              type="email"
+              name="email"
+              placeholder="Enter a valid email address"
+              required
+            />
+
+            <div class="form-section">
+              <input
+                id="submit"
+                class="input-style button"
+                type="submit"
+                value="Sign up now!"
+              />
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- end newsletter section -->
+
+      <footer class="center-text dshadow">
+        <p>
+          Copyright © 3306
+          <span class="orange-text bold">Moonsorrow Industries Ltd.</span>
+        </p>
+        <p>
+          Written, coded and abused by
+          <a
+            href="https://www.freecodecamp.org/caffeinatedpixels"
+            target="”_blank”"
+            >Stevie Gill</a
+          >
+        </p>
+      </footer>
+    </div>
+    <!-- end of main container -->
+
+    <!-- added in a script to offset anchor for fixed header plus it has a nice scrolling animation :) -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script src="main.js"></script>
+  </body>
 </html>
