--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Moonsorrow Industries</title>
@@ -124,7 +124,6 @@
               width="560"
               height="315"
               src="https://www.youtube.com/embed/WSE3VIKO0pY"
-              frameborder="0"
               allow="accelerometer; encrypted-media; gyroscope; picture-in-picture;"
               allowfullscreen
             ></iframe>
