--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8" />
     <title>Moonsorrow Industries</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Quicksand:400,600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Uncial+Antiqua&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="./favicon.png" />
