--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
       </div>
 
       <nav id="nav-bar">
-        <ul>
+        <ul class="nav-list">
           <li><a class="nav-link" href="#main">About</a></li>
           <li><a class="nav-link" href="#features">Features</a></li>
           <li><a class="nav-link" href="#demo">Video</a></li>
           <li><a class="nav-link" href="#pricing">Pricing</a></li>
           <li><a class="nav-link" href="#form">Mailing</a></li>
         </ul>
+        <div class="burger-btn">
+          ☰
+        </div>
       </nav>
     </header>
 
