switched to sass

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Moonsorrow Industries</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="main.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Uncial+Antiqua&display=swap"
