--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="./favicon.png" />
   </head>
   <body>
-    <header id="header">
+    <header id="header" class="header">
       <div class="logo">
         <img
           id="header-img"
@@ -21,7 +21,7 @@
         />
       </div>
 
-      <nav id="nav-bar">
+      <nav id="nav-bar" class="nav-bar">
         <ul class="nav-list">
           <li><a class="nav-link" href="#main">About</a></li>
           <li><a class="nav-link" href="#features">Features</a></li>
@@ -38,7 +38,7 @@
     <div id="main" class="main">
       <!-- main container -->
 
-      <div id="about" class="fcontainer falign-center center-text">
+      <div id="about" class="about fcontainer falign-center center-text">
         <!-- intro section -->
         <div class="">
           <div class="heading">
