nav-bar now uses flex

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
       <!-- end features section -->
 
-      <div id="demo" class="fcontainer gray">
+      <div id="demo" class="demo fcontainer gray">
         <!-- video section -->
         <div class="fbox1">
           <h2>See it in action</h2>
