tweaked footerlink text

--- a/index.html
+++ b/index.html
@@ -213,12 +213,8 @@
           <span class="orange-text bold">Moonsorrow Industries Ltd.</span>
         </p>
         <p>
-          Written, coded and abused by
-          <a
-            href="https://steviegill-webportfolio.netlify.app/"
-            target="”_blank”"
-            >Stevie Gill</a
-          >
+          Designed & coded by
+          <a href="https://steviegill-webportfolio.netlify.app/">Stevie Gill</a>
         </p>
       </footer>
     </div>
