added drop shadow to Moonsorrow Ind

--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
           <div class="form-text">
             <p>
               Stay in the loop with the
-              <span class="orange-text bold">Moonsorrow Industries</span>
+              <span class="orange-text bold dshadow"
+                >Moonsorrow Industries</span
+              >
               newsletter, for all the latest product updates, exclusive offers,
               and more spam and unsolicited emails from unvetted third-parties
               than your junk folder can reasonably handle. Is email still even a
