--- a/index.html
+++ b/index.html
@@ -3,7 +3,46 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Primary Meta Tags -->
     <title>Moonsorrow Industries</title>
+    <meta name="title" content="Moonsorrow Industries" />
+    <meta
+      name="description"
+      content="An example project landing page for the fictional company Moonsorrow Industries."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://moonsorrow-industries.netlify.app/"
+    />
+    <meta property="og:title" content="Moonsorrow Industries" />
+    <meta
+      property="og:description"
+      content="An example project landing page for the fictional company Moonsorrow Industries."
+    />
+    <meta
+      property="og:image"
+      content="https://moonsorrow-industries.netlify.app/img/product-landing-page.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://moonsorrow-industries.netlify.app/"
+    />
+    <meta property="twitter:title" content="Moonsorrow Industries" />
+    <meta
+      property="twitter:description"
+      content="An example project landing page for the fictional company Moonsorrow Industries."
+    />
+    <meta
+      property="twitter:image"
+      content="https://moonsorrow-industries.netlify.app/img/product-landing-page.jpg"
+    />
+
     <link rel="stylesheet" href="main.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
